@@ -1,1 +1,1 @@
-PluginRegistry-1_0_2+
+1.0.2+
