@@ -1,0 +1,54 @@
+<h1 tal:replace="structure here/manage_page_header"> PAGE HEADER </h1>
+<h2 tal:replace="structure here/manage_tabs"> TABS </h2>
+
+<h3> Active Plugins </h3>
+
+<p class="form-help">
+  This view shows all known plugin types and which plugins have been
+  activated or are still available for each type.
+</p>
+
+<table>
+
+  <tr class="list-header">
+    <td class="form-label"> Plugin Type </td>
+    <td class="form-label"> Active plugins </td>
+    <td class="form-label"> Available plugins </td>
+  </tr>
+
+   <tr tal:repeat="info here/listPluginTypeInfo">
+
+     <td class="form-text">
+       <a href="?plugin_type=PTYPE"
+          tal:attributes="href string:?plugin_type=${info/id}"
+          tal:content="string: ${info/title/title} Plugins"
+       >PLUGIN TYPE DESCRIPTION</a>
+     </td>
+
+     <tal:plugins define="plugins python: here.getAllPlugins(info['id'])">
+       <td class="form-text"
+           tal:define="actives plugins/active|python: []">
+         <span tal:repeat="active_id actives"
+               tal:omit-tag="active_id">
+           <a href=""
+              tal:attributes="href string:../${active_id}/manage_workspace"
+              tal:content="string:${active_id}">foo_plugin</a> 
+         </span>
+       </td>
+
+       <td class="form-text"
+           tal:define="inactives plugins/available|python: []">
+         <span tal:repeat="inactive_id inactives"
+               tal:omit-tag="inactive_id">
+           <a href=""
+              tal:attributes="href string:../${inactive_id}/manage_workspace"
+              tal:content="inactive_id">foo_plugin</a> 
+         </span>
+       </td>
+     </tal:plugins>
+
+   </tr>
+
+</table>
+
+<h1 tal:replace="structure here/manage_page_footer"> PAGE FOOTER </h1>
